tests/Rules/Aria/Fixtures/invalid/aria_attr_not_allowed.html.twig
{# 1 errors #}
<div role="button" aria-checked="true"></div>
